<resources>
    <string name="app_name">Peruíbe Melhor</string>
    <string name="sobre_nome">Sobrenome</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="aviso_login">Email</string>
    <string name="bt_login">Login</string>
    <string name="bt_cadastro">Novo usuário? Crie sua conta aqui.</string>
    <string name="preenche_cadastro">Preencha seus dados para cadastro</string>
    <string name="nome_completo">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="masculino">M</string>
    <string name="feminino">F</string>
    <string name="outros">Outros</string>
    <string name="genero">Gênero:</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone 99 9 9999 9999</string>
    <string name="profissao">Profissão</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="pr_ximo">Próximo</string>
    <string name="estado">Estado</string>
    <string name="Complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="salvar">Salvar</string>
    <string name="nome_pasta">Nome</string>
    <string name="discusao">Discussão</string>
    <string name="descricao">Descrição</string>
    <string name="nova_pasta">Nova Pasta</string>
    <string name="login_invalido">Login inválido!</string>
    <string name="campos_vazios">Campos vazios!</string>

    <!-- Melhorar os texto das mensagens de erros -> msg_error_* -->
    <string name="msg_error_cpf">CPF inválido!</string>
    <string name="msg_error_nome_completo">Favor colocar seu nome completo!</string>
    <string name="msg_error_senha">Mínimo 6 dígitos!</string>
    <string name="msg_error_senha_conf">A senha está diferente!</string>
    <string name="msg_error_email">Email inválido!</string>
    <string name="msg_error_gerero">Escolha um gênero!</string>
    <string name="msg_error_telefone">Número de telefone inválido!</string>
    <string name="msg_error_escolaridade">Escolha um dos itens na lista!</string>
    <string name="msg_error_profissao">Escolha um dos itens na lista!</string>
    <string name="msg_error_endereco">Endereço inválido!</string>
    <string name="cadastro_sucesso">Cadastrado com sucesso!</string>
    <string name="cadastro_erro">Já cadastrado!</string>
    <string name="adinionar_pasta">Adicionar Pasta</string>


    <string-array name="categorias_array">
        <item>Selecione uma categoria</item>
        <item>Saúde</item>
        <item>Infraestrutura</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="nav_abrir">Abrir menu</string>
    <string name="nav_fechar">Fechar menu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>